# openreview-expertise

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  WRITEUP.md  build_expertise_utils.py  clean_jobs.sh  clean_tmp.sh  constraints.txt  default.log.1  pyproject.toml  setup.py
.circleci/: config.yml
benchmark/: __init__.py  goldstandard_evaluator.py  run_benchmark.py
bert-expertise/: .gitignore  environment.yml
expertise/: __init__.py  build_pipeline.py  clean_tmp.py  core.py  create_dataset.ipynb  create_dataset.py  embeddings_cache.py  execute_expertise.py  execute_pipeline.py  extract_data.py  infer_model.py  run.py  run_duplicate_detection.py  run_ranking.py  run_test.py  setup_model.py  test_model.py  tfidf_scores.py  train_model.py
samples/: README_cross_validation.md  dataset-tutorial.ipynb  experiment1.ipynb  experiment2-correlations.ipynb  hyperparameter_space_bm25.json  hyperparameter_space_specter.json  hyperparameter_space_specter2scincl.json  process-tfidf.py  uai-process-tfidf.py
tests/: conference_locks.py  conftest.py  fakeData.json  generate_token.py  test_aggregate_by_group.py  test_apiv2.py  test_benchmark_cli.py  test_benchmark_goldstandard_evaluator.py  test_benchmark_runner.py  test_build_pipeline.py  test_cached_embeddings.py  test_create_conference.py  test_create_dataset.py  test_create_journal.py  test_datasets.py  test_elmo.py  test_embeddings_cache.py  test_expertise_apiv2.py  test_expertise_cloud_service.py  test_expertise_service.py  test_gcp_interface.py  test_pipeline.py  test_queue.py  test_queue_evict.py  (+16 more)
(+213 files in other folders)
